--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,177 @@
-.App {
-  text-align: center;
+.container-fluid {
+  padding: 2rem;
+  max-height: 100vh;
+}
+.top-line::after {
+  content: "";
+  position: absolute;
+  top: 70%;
+  left: 80%;
+  width: 200px;
+  height: 2px;
+  margin-top: -1px;
+  background: #d0d0d0;
+}
+.left-line::after {
+  content: "";
+  position: absolute;
+  top: 30%;
+  left: 2%;
+  width: 2px;
+  height: 100vh;
+  margin-right: 10px;
+  background: #d0d0d0;
+}
+.Welcome {
+  top: 250px;
+  left: 110px;
+  width: 760px;
+  height: 349px;
+}
+.card:hover {
+  background-color: #f3f2f2;
+}
+.card-border {
+  border-top-width: 4px;
+}
+.card-border-top-red {
+  height: 350px;
+  border-top-color: #df0d25;
+}
+.card-border-top-blue {
+  top: 75px;
+  height: 280px;
+  border-top-color: #0071d8;
+}
+.card-border-top-green {
+  bottom: 85px;
+  height: 440px;
+  border-top-color: #00d879;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 768px) {
+  .top-line:after {
+    content: none;
+  }
+  .card-border {
+    max-height: 350px;
+    height: auto;
+  }
+  .card-border-top-blue {
+    top: 0;
+  }
+  .blue-column {
+    margin: 1rem 0 6rem 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.arrow {
+  opacity: 1;
+  width: 42px;
+  height: 42px;
+}
+.arrow-red {
+  background: transparent url("./assets/img/Arrow-right-red.svg") 0% 0%
+    no-repeat padding-box;
+}
+.arrow-blue {
+  background: transparent url("./assets/img/Arrow-right-blue.svg") 0% 0%
+    no-repeat padding-box;
+}
+.arrow-green {
+  background: transparent url("./assets/img/Arrow-right-green.svg") 0% 0%
+    no-repeat padding-box;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-item > a::after {
+  content: "";
+  display: block;
+  margin: auto;
+  height: 3px;
+  width: 0;
+  top: 5px;
+  background: transparent;
+  transition: all 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav-item > a:hover::after {
+  width: 100%;
+  background: #0071d8;
+}
+.btn-welcome {
+  background: #ff9700 0% 0% no-repeat padding-box !important;
+  opacity: 1;
+}
+.btn-welcome:hover,
+.btn-welcome:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  height: 130vh;
+  margin-bottom: 4rem;
+}
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  text-align: left;
+  bottom: 0;
+  left: 2rem;
+  right: 60%;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  min-height: 130vh;
+}
+
+.btnSlide {
+  background-color: #ff9700;
+  margin-right: 1rem;
+  border: none;
+  width: 100px;
+  height: 4px;
+}
+.btnSlide.active {
+  background-color: white;
+}
+.slide-left {
+  animation: myAnim 1s ease 0s 1 normal forwards;
+}
+@keyframes myAnim {
+  0% {
+    opacity: 0;
+    transform: translateX(250px);
   }
-  to {
-    transform: rotate(360deg);
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 130vh;
+}
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
   }
 }
